Resolved issue with Logotext failing to display a custom font on mobile devices (e.g. Android). Added another Google webfont to resolve issue. Resolves and Closes Issue #2.

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,7 +6,7 @@
 	border-bottom:5px solid #005E9D;
 	border-bottom:5px solid rgba(0,0,0,0.2);
 	position: relative;
-	
+
 		&:after{
 			content: "";
 			display: block;
@@ -33,6 +33,7 @@
 
 	.logo{
 		font: 3.0em/2.5em "Futura","FuturaBT","Myriad Pro",Myriad,"PT Sans","Century Gothic",CenturyGothic,AppleGothic,"Helvetica Neue","Trebuchet MS",Arial,sans-serif;
+		font: 3.0em/2.25em "Ubuntu";
 		font: 3.8em/1.5em "Tw Cen MT";
 		text-decoration: none;
 		color: #efefef;
@@ -58,6 +59,7 @@
 
 		.tagline{
 			font: .25em/0em "Futura","FuturaBT","Myriad Pro",Myriad,"PT Sans","Century Gothic",CenturyGothic,AppleGothic,"Helvetica Neue","Trebuchet MS",Arial,sans-serif;
+			font: .35em/0em "Ubuntu";
 			font: .3em/0em "Tw Cen MT";
 			display: block;
 			margin: -8px auto 0 9em;
